--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Virtual Environment
+env/
+
 # Visual Studio
 .vs/
 bin/
@@ -15,3 +18,10 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Config, data
+.env
