--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,30 +21,31 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Lint with flake8
       run: |
+        pip install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    - name: Log in to Docker registry
+      uses: docker/login-action@v1
+      with:
+        registry: modpack.azurecr.io
+        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
     - name: Build and tag Docker image
-      run: |
-        docker build . -t modpack.azurecr.io/modpack-inspector:${{ github.sha }}
-        echo ${{ secrets.AZURE_REGISTRY_PASSWORD }} | docker login modpack.azurecr.io -u ${{ secrets.AZURE_REGISTRY_USERNAME }} --password-stdin
+      run: docker build . -t modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
     - name: Push Docker image to Azure Container Registry
-      run: |
-        docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
+      run: docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
     - name: Deploy to Azure Container Instances
       uses: azure/aci-deploy@v1
       with:
         resource-group: modpack-inspector-group
         image: modpack.azurecr.io/modpack-inspector:${{ github.sha }}
-        registry-login-server: modpack.azurecr.io
-        registry-username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        registry-password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
         name: modpack-inspector-aci
         location: eastus
