--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,11 @@ jobs:
     - name: Push Docker image to Azure Container Registry
       run: docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Deploy to Azure Container Instances
       uses: azure/aci-deploy@v1
       with:
