--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-    # - name: Set up Python 3.9
-    #   uses: actions/setup-python@v2
-    #   with:
-    #     python-version: '3.9'
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
 
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # - name: Lint with flake8
-    #   run: |
-    #     pip install flake8
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Log in to Docker registry
       uses: docker/login-action@v1
@@ -36,22 +36,22 @@ jobs:
         username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
         password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
-    # - name: Build and tag Docker image
-    #   run: docker build . -t modpack.azurecr.io/modpack-inspector:${{ github.sha }}
+    - name: Build and tag Docker image
+      run: docker build . -t modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
-    # - name: Push Docker image to Azure Container Registry
-    #   run: docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
+    - name: Push Docker image to Azure Container Registry
+      run: docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
     - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # - name: Deploy to Azure Container Instances
-    #   uses: azure/aci-deploy@v1
-    #   with:
-    #     resource-group: modpack-inspector-group
-    #     image: modpack.azurecr.io/modpack-inspector:${{ github.sha }}
-    #     name: modpack-inspector-aci
-    #     location: eastus
-    #     dns-name-label: modpack-inspector-fadingstar
+    - name: Deploy to Azure Container Instances
+      uses: azure/aci-deploy@v1
+      with:
+        resource-group: modpack-inspector-group
+        image: modpack.azurecr.io/modpack-inspector:${{ github.sha }}
+        name: modpack-inspector-aci
+        location: eastus
+        dns-name-label: modpack-inspector-fadingstar
