--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,49 +9,32 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-    - name: Log in to Docker registry
-      uses: docker/login-action@v1
-      with:
-        registry: modpack.azurecr.io
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
-    - name: Build and tag Docker image
-      run: docker build . -t modpack.azurecr.io/modpack-inspector:${{ github.sha }}
-
-    - name: Push Docker image to Azure Container Registry
-      run: docker push modpack.azurecr.io/modpack-inspector:${{ github.sha }}
 
     - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    - name: Build and push Docker image to ACR
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+        run: |
+          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest .
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
+
     - name: Deploy to Azure Container Instances
       uses: azure/aci-deploy@v1
       with:
         resource-group: modpack-inspector-group
-        image: modpack.azurecr.io/modpack-inspector:${{ github.sha }}
-        name: modpack-inspector-aci
-        location: eastus
-        dns-name-label: modpack-inspector-fadingstar
+        dns-name-label: modpack-inspector-instance
+        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
+        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        registry-username: ${{ secrets.REGISTRY_USERNAME }}
+        registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+        name: modpack-inspector-instance
+        location: 'Your Azure Location'  # Replace with your Azure location, e.g., eastus
