--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,17 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Build and push Docker image to ACR
+    - name: Login to Azure Container Registry
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
-        run: |
-          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest .
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
+
+    - name: Build and push Docker image to ACR
+      run: |
+        docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest .
+        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
 
     - name: Deploy to Azure Container Instances
       uses: azure/aci-deploy@v1
