--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,6 @@ name: Python CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -30,13 +28,23 @@ jobs:
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
 
     - name: Deploy to Azure Container Instances
+      id: deploy
       uses: azure/aci-deploy@v1
       with:
         resource-group: modpack-inspector-group
-        dns-name-label: modpack-inspector-instance
+        dns-name-label: modpack-inspector-instance-${{ github.run_id }}
         image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         registry-username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
         registry-password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
         name: modpack-inspector-instance
         location: 'eastus'
+        cpu: 1
+        memory: 1.5
+      continue-on-error: true
+
+    - name: Recreate ACI (if necessary)
+      if: steps.deploy.outcome == 'failure'
+      run: |
+        az container delete --name modpack-inspector-instance --resource-group modpack-inspector-group --yes
+        az container create --resource-group modpack-inspector-group --name modpack-inspector-instance --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest --dns-name-label modpack-inspector-instance-${{ github.run_id }} --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} --location eastus --cpu 1 --memory 1.5
