--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,42 +3,61 @@ name: Python CI
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        # Lint for errors
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Lint for style & complexity, allowing for non-zero exit codes due to "soft" linting failures
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Login to Docker registry
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+    - name: Build and tag Docker image
+      run: docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack-inspector:${{ github.sha }}
+
+    - name: Push Docker image to Azure Container Registry
+      run: docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack-inspector:${{ github.sha }}
 
     - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Login to Azure Container Registry
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
-    - name: Build and push Docker image to ACR
-      run: |
-        docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest .
-        docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
-
     - name: Deploy to Azure Container Instances
       id: deploy
       uses: azure/aci-deploy@v1
       with:
         resource-group: modpack-inspector-group
-        dns-name-label: modpack-inspector-instance-${{ github.run_id }}
-        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest
-        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-        registry-username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        registry-password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-        name: modpack-inspector-instance
-        location: 'eastus'
+        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack-inspector:${{ github.sha }}
+        name: modpack-inspector-aci
+        location: eastus
+        dns-name-label: modpack-inspector
         cpu: 1
         memory: 1.5
       continue-on-error: true
@@ -46,5 +65,5 @@ jobs:
     - name: Recreate ACI (if necessary)
       if: steps.deploy.outcome == 'failure'
       run: |
-        az container delete --name modpack-inspector-instance --resource-group modpack-inspector-group --yes
-        az container create --resource-group modpack-inspector-group --name modpack-inspector-instance --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack:latest --dns-name-label modpack-inspector-instance-${{ github.run_id }} --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} --location eastus --cpu 1 --memory 1.5
+        az container delete --name modpack-inspector-aci --resource-group modpack-inspector-group --yes
+        az container create --resource-group modpack-inspector-group --name modpack-inspector-aci --image ${{ secrets.REGISTRY_LOGIN_SERVER }}/modpack-inspector:${{ github.sha }} --dns-name-label modpack-inspector-${{ github.run_id }} --registry-login-server ${{ secrets.REGISTRY_LOGIN_SERVER }} --registry-username ${{ secrets.AZURE_REGISTRY_USERNAME }} --registry-password ${{ secrets.AZURE_REGISTRY_PASSWORD }} --location eastus --cpu 1 --memory 1.5
